--- a/main.css
+++ b/main.css
@@ -162,10 +162,14 @@ nav {
 }
 
 .group-image {
+    opacity: 0;
     flex: 1;
     margin-right: 20px;
     max-width: 600px;
 }
+
+
+
 
 .group-image img {
     max-width: 100%;
@@ -174,6 +178,7 @@ nav {
 }
 
 .group-text {
+    opacity: 0;
     flex: 2;
 }
 
@@ -189,11 +194,14 @@ nav {
 
 
 .animate__fadeInLeft {
+    opacity: 1;
     animation-duration: 1.5s;
     animation-fill-mode: forwards; 
 }
 
+
 .animate__fadeInRight {
+    opacity: 1;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
 }
@@ -304,6 +312,10 @@ input.invalid {
     border-color: red;
 }
 
+select.invalid {
+    border-color: red;
+}
+
 button[type="submit"] {
     padding: 10px 20px;
     background-color: #800080;
@@ -368,6 +380,7 @@ label{
 .horse {
     position: relative;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: start;
